<resources>
    <string name="app_name">BarsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tabNameInv">Inventura</string>
    <string name="tabNameShifts">Smjene</string>
    <string name="tabNameAdmin">Administracija</string>
    <string name="lb_Username">Korisničko ime</string>
    <string name="lb_Password">Lozinka</string>
    <string name="btn_Login">Prijavi se</string>
    <string name="tv_WrongData">Unijeli ste pogrešne podatke</string>
    <string name="minimalna_kolicina">Minimalna količina: </string>
    <string name="potvrdi">Potvrdi</string>
    <string name="odbaci">Odbaci</string>
    <string name="ime_artikla">Ime artikla:</string>
    <string name="mjerna_jedinica">Mjerna jedinica:</string>
</resources>