<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:minWidth="400dp"
    android:minHeight="200dp"
    android:orientation="vertical"
    android:padding="@dimen/defaultPadding"
    tools:context=".inventory.InsertItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ime_artikla" />

        <EditText
            android:id="@+id/et_ItemName"
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minimalna_kolicina" />

        <EditText
            android:id="@+id/et_MinSupply"
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mjerna_jedinica" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_UOM"/>
    </LinearLayout>

    <Space
        android:layout_width="@dimen/spacing"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_InsertItemConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_700"
            android:text="@string/potvrdi" />

        <Space
            android:layout_width="@dimen/spacing"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_InsertItemCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/odbaci" />
    </LinearLayout>

</LinearLayout>